Ensure tooltips stay visible on the screen...
...even when they have a lot of entries. Workaround for issue
grafana/grafana#7075.

--- a/public/sass/components/_tooltip.scss
+++ b/public/sass/components/_tooltip.scss
@@ -116,3 +116,8 @@
 .grafana-tip {
   padding-left: 5px;
 }
+
+.graph-tooltip.grafana-tooltip {
+  top: 0px !important;
+  max-height: 1000px !important;
+}
